# e-commerce-multi-modal-retriever

./: .gitignore  README.md  pyproject.toml
docs/: architecture-diagram.html  evaluation-plan.md  review-aspect-extraction.md  system-design.md
infra/gcp/: README.md  extract.service  gemma_chat_template.jinja  startup.sh  sync-checkpoint.service  sync-checkpoint.timer  vllm.service
notebooks/: esci_asin_join.ipynb  esci_images.ipynb  esci_review_text_mining.ipynb  esci_s_inspection.ipynb
prompts/reflection/: template_v1.md
prompts/review_aspects/: g1.yaml  g2.yaml  gb1.yaml  gb10.yaml  gb2.yaml  gb3.yaml  gb4.yaml  gb5.yaml  gb6.yaml  gb7.yaml  gb8.yaml  gb9.yaml  gi1.yaml  gi10.yaml  gi2.yaml  gi3.yaml  gi4.yaml  gi5.yaml  gi6.yaml  gi7.yaml  gi8.yaml  gi9.yaml  gm1.yaml  gm10.yaml  gm2.yaml  gm3.yaml  gm4.yaml  gm5.yaml  gm6.yaml  gm7.yaml  gm8.yaml  gm9.yaml  q1.yaml  qb1.yaml  qb10.yaml  qb2.yaml  qb3.yaml  qb4.yaml  qb5.yaml  qb6.yaml  (+34 more)
scripts/: 01_fetch_sources.py  02_parse_esci_s.py  03_build_datasets.py  04_fetch_images.py  05_extract_review_aspects.py  eval_gold.py  gold_annotation.py  optimize_extraction_prompt.py  plot_gepa_curve.py  plot_loop_time.py  plot_model_comparison.py
src/emmr/: __init__.py  config.py
src/emmr/data/: __init__.py  build.py  esci_s.py  images.py  parsers.py  sources.py
src/emmr/reviews/: __init__.py  bucketing.py  extract.py  goldset.py  loading.py  prompts.py
src/esci_ma/: __init__.py
tests/: conftest.py  test_backend.py  test_bucketing.py  test_build.py  test_esci_s.py  test_extract.py  test_goldset.py  test_images.py  test_parsers.py
(+3 files in other folders)
