[project]
name = "esci-ma"
version = "0.1.0"
description = "Multi-aspect retrieval on Amazon ESCI: text, reviews and images as separate vector spaces"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "duckdb>=1.0",
    "datasets>=2.19",
    "zstandard>=0.22",
    "requests>=2.32",
    "pillow>=10.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "ipykernel>=6.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esci_ma"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
